@@ -1,0 +1,9 @@
+Title: Fixed selection of hosts for bulk actions
+Level: 1
+Component: wato
+Class: fix
+State: unknown
+Version: 1.2.4p6
+Date: 1405407835
+
+
