@@ -78,12 +78,15 @@ def cleanup_old_selections():
 def selection_id():
     if not html.has_var('selection'):
         sel_id = lib.gen_id()
-        html.add_var('selection', sel_id)
+        html.set_var('selection', sel_id)
+        return sel_id
     else:
         sel_id = html.var('selection')
         # Avoid illegal file access by introducing .. or /
         if not re.match("^[-0-9a-zA-Z]+$", sel_id):
-            return lib.gen_id()
+            new_id = lib.gen_id()
+            html.set_var('selection', new_id)
+            return new_id
         else:
             return sel_id
 
