@@ -12,6 +12,9 @@
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
     * 1060 FIX: Fixed exception during first login of a user when saving of access times is enabled...
 
+    WATO:
+    * 1056 FIX: Fixed selection of hosts for bulk actions
+
 
 1.2.4p5:
     Core & Setup:
